--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <title>AIS Audit</title>
 </head>
 <body>
-    
+    <!-- Main -->
+    <div class="container">
+        <aside>
+            <div class="top">
+                <div class="logo">
+                    <img src="/images/alexis.png" alt="ALEXIS">
+                </div>
+            </div>
+        </aside>
+    </div>
 
  
 <!-- JavaScript File -->
