--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <div class="top">
                 <div class="logo">
                     <img src="/images/alexis.png" alt="ALEXIS">
+                    <h2>ALEX <span class="danger">IS</span></h2>
+                </div>
+                <div class="close" id="close-btn">
+                    <span class="material-icons-sharp">close</span>
                 </div>
             </div>
         </aside>
