--- a/index.html
+++ b/index.html
@@ -1,36 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Material Icon CDN -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
+      rel="stylesheet"
+    />
 
     <!-- External CSS Link -->
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/main.css" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>AIS Audit</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Main -->
     <div class="container">
-        <aside>
+      <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="/images/alexis.png" alt="ALEXIS">
+                    <img src="/images/alexis.png" alt="ALEXIS" />
                     <h2>ALEX <span class="danger">IS</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
                 </div>
             </div>
-        </aside>
+
+            <div class="sidebar">
+                <a href="#">
+                    <span class="material-icons-sharp">dasboard</span>
+                    <h3>Dashboard</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">person_outline</span>
+                    <h3>Active Users</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">reciept_long</span>
+                    <h3>Complaints</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">insights</span>
+                    <h3>Insight</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">mail_outline</span>
+                    <h3>Inbox</h3>
+                    <span class="message-count">99</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">inventory</span>
+                    <h3>Drafts</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">report_gmailerrorred</span>
+                    <h3>Abuse and Reports</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">settings</span>
+                    <h3>Settings</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">pen_outline</span>
+                    <h3>Customise</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">logout</span>
+                    <h3>Logout</h3>
+                </a>
+            </div>
+
+      </aside>
     </div>
 
- 
-<!-- JavaScript File -->
-<script src="/script.js"></script>
-</body>
+    <!-- JavaScript File -->
+    <script src="/script.js"></script>
+  </body>
 </html>
