--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/main.css" />
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>AIS Audit</title>
+    <title>AIS CHECKS</title>
   </head>
   <body>
     <!-- Main -->
@@ -23,7 +23,7 @@
             <div class="top">
                 <div class="logo">
                     <img src="/images/alexis.png" alt="ALEXIS" />
-                    <h2>ALEX <span class="danger">IS</span></h2>
+                    <h2>ALEX<span class="danger">IS</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -66,7 +66,7 @@
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">pen_outline</span>
-                    <h3>Customise</h3>
+                    <h3>Customize</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">logout</span>
