--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- External CSS Link -->
     <link rel="stylesheet" href="/main.css" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>AIS CHECKS</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <title>AIS AUDITS </title>
   </head>
   <body>
     <!-- Main -->
@@ -32,7 +32,7 @@
 
             <div class="sidebar">
                 <a href="#">
-                    <span class="material-icons-sharp">dasboard</span>
+                    <span class="material-icons-sharp">dashboard_views</span>
                     <h3>Dashboard</h3>
                 </a>
                 <a href="#">
